--- a/BFtpCompnentApp/client/dialog.ui
+++ b/BFtpCompnentApp/client/dialog.ui
@@ -43,6 +43,12 @@
      </property>
      <item>
       <widget class="QPushButton" name="pushButtonHome">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
          <width>24</width>
@@ -78,6 +84,12 @@
      </item>
      <item>
       <widget class="QLabel" name="labelPath_2">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>：</string>
        </property>
@@ -87,6 +99,12 @@
       <widget class="QLineEdit" name="lineEditPath">
        <property name="enabled">
         <bool>true</bool>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
        </property>
        <property name="toolTip">
         <string>当前路径</string>
@@ -98,6 +116,12 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButtonRefresh">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
          <width>24</width>
@@ -128,8 +152,8 @@
      <item>
       <widget class="QLineEdit" name="lineEdit">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-         <horstretch>9</horstretch>
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>207</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
